--- a/Compose.yaml
+++ b/Compose.yaml
@@ -24,6 +24,8 @@ services:
       - 3001:8000
     volumes:
       - ./backend/src:/app
+    depends_on:
+      - database
     develop:
       watch:
         - action: rebuild
