update the AI folder and added the email messages services

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 API_KEY=abc123
 
 DATABASE_URL = postgresql+psycopg://ai_agents:db-password@database:5432/agent_db
+
+OPENAI_BASE_URL = "http://model-runner.docker.internal/engines/v1"
+OPENAI_MODEL_NAME = "ai/gemma3:4B-Q4_0"
+OPENAI_API_KEY = "not-set"
